kubernetes/04-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ms-project
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
