kubernetes/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ms-project
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
